--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -3,12 +3,35 @@ header{
     position:relative;
 }
 
+h1.section-title{
+    text-align: center; 
+    float: left;
+    margin-bottom: 15px;
+    font-size: 36px;
+    color: darkgray;
+}
+
+h1.section-title-bold{
+    color: dodgerblue;
+    float: left;
+    font-weight: bold;
+}
+
+p.section-text{
+    color: darkgray;
+    display: inline-block;
+}
+
 p.secondaryText {
     color: darkgray;
 }
 
 .menu{
     background-color: dodgerblue;
+}
+
+.menu ul {
+    margin-bottom: 0;
 }
 
 .logo{
@@ -38,6 +61,24 @@ p.secondaryText {
     background-color: lightgray;
 }
 
+.carousel-inner {
+    height: 700px;
+}
+
+.carousel-inner > .item > img {
+    filter: brightness(40%);
+}
+
+.carousel-indicators li {
+    width: 30px;
+    border-radius: 0px;
+}
+
+.carousel-indicators .active {
+    width: 35px;
+    background-color: darkgray;
+}
+
 .img-container{
     position: absolute;
     opacity: 0.75;
@@ -47,30 +88,38 @@ p.secondaryText {
 }
 
 .body-container {
-    height: 600px;
+    height: 500px;
     width: 100%;
     clear: both;
     position: relative;
+    display: inline;
 }
 
 body{
     margin: 0;
 }
 
-
-#frontText {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    margin-bottom: 30px;
-    color: white;
+.carousel-caption h2{
     font-size: 50px;
-    text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+}
+
+p.carousel-text{
+    font-size: 20px;
+}
+
+
+.carousel-caption {
+    left: 70;
+    top: 0;
+    position: absolute;
+    text-align: left;
+    color: white;
     background-color: transparent;
 }
 
 .main-body{
-    position: relative;
+    padding-left: 160px;
+    padding-right: 160px;
     text-align: center;
 }
 
@@ -78,18 +127,115 @@ body{
     text-align: center;
 }
 
-.services-box, .company-box, .contact-box{
+.services-box, .company-box{
+    margin-top: 50px;
+    align-content: center;
     position: relative;
+    width: 280px;
+    margin-right: 80px;
+    background-color: transparent;
+    display: inline-block;
+}
+
+.contact-box{
+    margin-top: 50px;
+    align-content: center;
+    position: relative;
+    width: 250px;
+    background-color: transparent;
+    display: inline-block;
+}
+
+.box-icon{
+    border-radius: 50%;
+    border: 1px;
+    border-style: solid;
+    border-color: darkgray;
+    position: absolute;
+    left: 32%;
+    align-content: center;
+    width: 90px;
+    height: 90px;
+    background-color: white;
+}
+
+.img-icon{
+    border-radius: 0px;
+    background-color: transparent;
+    margin-top: 23px;
+    width: 44px;
+    height: 44px;
+}
+
+p.box-content-info{
+    color: white;
+    
+}
+
+.box-content-text{
+    margin-top: 70px;
+}
+
+.box-content{
+    margin-top: 40px;
+    width: 250px;
+    padding: 8px;
+    background-color: dodgerblue;
+}
+
+.box-content h2{
+    font-size: 20px;
+    color: white;
+    font-weight: bold;
+}
+
+.about-section{
+    margin-top: 30px;
+}
+
+.about-content{
+    
+    background-color: transparent;
+}
+
+.about-content > .left {
+    height: 400px;
+    width: 50%;
+    text-align: left;
+    padding: 20px;
+    float: left;
+    background-color: black;
+}
+
+.about-content > .left > p {
+    color: white;
+    font-size: 14px;
+}
+
+.about-content > .right {
+    height: 400px;
+    width: 50%;
+    float: left;
+}
+
+
+
+.news-section{
+    text-align: center;
+    display: inline-block;
+    margin-top: 30px;
+}
+
+.article-box{
     width: 250px;
     height: 200px;
     margin-right: 60px;
-    background-color: dodgerblue;
+    background-color: gainsboro;
     display: inline-block;
 }
 
 footer{
     background-color: black;
-    height: 200px;
 }
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
