--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -95,27 +95,60 @@ body{
     margin: 0;
 }
 
-.carousel-caption h2{
-    font-size: 50px;
+.cycle-slideshow{
+    width: 100%;
+    display: block;
+    position: relative;
+    overflow: hidden;
+
 }
 
-p.carousel-text{
+.cycle-slideshow img {
+    filter: brightness(40%);
+    width: 100%;
+    height: 700px;
+}
+
+/* overlay */
+.cycle-overlay { 
+    font-family: tahoma, arial;
     font-size: 20px;
+    position: absolute; 
+    bottom: 0; 
+    width: 100%; 
+    z-index: 600;
+    background: black; 
+    color: white; 
+    padding: 15px; 
+    opacity: .5;
 }
 
-
-.carousel-caption {
-    left: 70;
-    top: 0;
+/* pager */
+.cycle-pager { 
+    text-align: center; 
+    width: 100%; 
+    z-index: 500; 
     position: absolute;
-    text-align: left;
-    color: white;
-    background-color: transparent;
+    top: 10px; 
+}
+.cycle-pager span { 
+    font-family: arial; 
+    font-size: 50px; 
+    width: 16px; 
+    height: 16px; 
+    display: inline-block; 
+    color: #ddd; cursor: pointer; 
+}
+.cycle-pager span.cycle-pager-active { 
+    color: #D69746;
+}
+.cycle-pager > * { 
+    cursor: pointer;
 }
 
 .main-body{
-    padding-left: 160px;
-    padding-right: 160px;
+    padding-left: 200px;
+    padding-right: 200px;
     text-align: center;
 }
 
