--- a/public/CSS/article_box.css
+++ b/public/CSS/article_box.css
@@ -1,16 +1,16 @@
 
 .article-box{
     margin-bottom: 50px;
-    display: inline-block;
 }
 
 .article-box > .article-img{
-    background-color: red;
+    overflow: hidden;
+    height: 260px;
 }
 
 .article-box > .article-img > img{
-    width: 100%;
-    height: 200px;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 .article-foot{
