--- a/public/CSS/footer.css
+++ b/public/CSS/footer.css
@@ -1,18 +1,25 @@
 footer {
     background:black;
-    padding:20px 0;
     border-top:2px solid #0ea6ff;
+    padding-top: 70px;
    }
+
+   footer .container{
+       padding: 0px;
+       width: 100%;
+   }
+
    .widget h2 {
     cursor:pointer;  
-    font-size:18px;
-    font-weight:bold;
+    font-size:28px;
     color: white;
-    padding-bottom:5px;
+    margin: 0px;
+    margin-bottom: 10px;
    }
    .footer-bottom {
-    background:#d8d8d8;
+    background: black;
     padding:15px 0;
+    margin-top: 20px;
     border-top:1px solid #d9d9d9;
     font-size:11px;
     color:#777;
@@ -21,19 +28,36 @@ footer {
    footer ul{
        margin: 0;
        padding: 0;
+       list-style: none;
 
    }
 
    footer ul li {
        display: list-item;
+       padding-top: 10px;
+       padding-bottom: 10px;
+       color: white;
+   }
+
+   footer ul li img{
+       width: 30px;
+       height: 30px;
+       padding: 5px;
+   }
+
+   footer ul li a{
+       padding-left: 5px;
+       color: white;
    }
 
    footer p{
        color: white;
+       margin: 0px;
+       padding-top: 15px;
    }
 
    footer img {
-        height: 40px;
+        height: 50px;
    }
      
    @media only screen and (max-width: 479px) {    
