--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -2,12 +2,23 @@ header{
     
 }
 
+@font-face{
+    font-family: mangaFont;
+    src: url('../fonts/antique/GenEiAntiqueTP-M.ttf');
+}
+
 html{
     background-color: white;
+    font-family: mangaFont, tahoma, arial;
 }
 
 h1{
     font-size: 38px;
+    font-family: mangaFont;
+}
+
+p{
+    font-family: mangaFont;    
 }
 
 h3{
@@ -83,10 +94,8 @@ h4{
 }
 
 .info-header img{
-    width: 55px;
-    height: 45px;
     padding-right: 10px;
-    border-right: 1px solid darkgray;
+    border-right: 1.4px solid #B2B2B2;
 }
 
 .info-header .info-content h5 {
@@ -110,8 +119,6 @@ h4{
 }
 
 .body-container {
-    height: 500px;
-    width: 100%;
     clear: both;
     position: relative;
     display: inline;
@@ -119,6 +126,7 @@ h4{
 
 body{
     margin: 0;
+    padding: 0px;
 }
 
 .cycle-slideshow{
@@ -136,8 +144,8 @@ body{
 
 /* overlay */
 .cycle-overlay { 
-    font-family: tahoma, arial;
-    font-size: 20px;
+    
+    font-size: 30px;
     position: absolute; 
     top: 20%;
     left: 6%;
@@ -145,6 +153,10 @@ body{
     z-index: 600;
     color: white; 
     padding: 15px; 
+}
+
+.cycle-overlay h1{
+    font-size: 50px;
 }
 
 /* pager */
@@ -181,15 +193,17 @@ body{
 }
 
 .options-box{
+    width: 200px;
     align-content: center;
     display: inline-block;
     margin-top: 50px;
 }
 
-.box-content:hover .box-icon{
-    -moz-box-shadow:    inset 0 0 10px #2A4BA7;
-    -webkit-box-shadow: inset 0 0 10px #2A4BA7;
-    box-shadow: inset 0 0 10px #2A4BA7;
+.stretch{
+    width: 100%;
+    display: inline-block;
+    font-size: 0;
+    line-height: 0;
 }
 
 .box-icon:hover{
@@ -208,12 +222,51 @@ body{
     border-style: solid;
     border-color: darkgray;
     position: absolute;
-    text-align: center;
     width: 140px;
     height: 140px;
     left: 50%;
     transform: translateX(-50%);
     background-color: white;
+}
+
+.thumbnail{
+    border: 0px;
+    margin: 0px;
+}
+
+.thumbnail .caption {
+    padding-top: 120px;
+    margin-top: 60px;
+    border: 2px solid #ddd;
+    border-radius: 4px;
+}
+
+.options-box > .caption:hover h3 {
+    color: white;
+}
+
+.options-box > .caption:hover{
+    color: white;
+    background-color: #0C2043;
+}
+
+.caption{
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out; 
+    background-color: white;
+}
+
+.options-box .caption h3{
+    color: black;
+    font-weight: bold;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out; 
 }
 
 .box-icon:before {
@@ -233,46 +286,6 @@ body{
 
 p.box-content-info{
     color: darkgray;
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    -ms-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out; 
-}
-
-.box-content-text{
-    padding-top: 100px;
-    padding-right: 10px;
-    padding-left: 10px;
-    border: 1px solid darkgray;
-}
-
-.box-content:hover h3 {
-    color: white;
-}
-.box-content:hover p.box-content-info{
-    color: white;
-}
-
-
-.box-content:hover{
-    color: white;
-    background-color: #0C2043;
-}
-
-.box-content{
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    -ms-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out; 
-    margin-top: 60px;
-    background-color: white;
-}
-
-.box-content h3{
-    color: black;
-    font-weight: bold;
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
@@ -330,27 +343,66 @@ p.about-text{
 }
 
 .news-section{
-    padding-top: 30px;
+    padding-top: 100px;
     padding-bottom: 30px;
     width: 100%;
 }
 
+.news-section .thumbnail{
+    border: 2px solid #ddd;
+}
+
+.news-section .thumbnail .caption{
+    margin-top: 0px;
+    padding-top: 9px;
+    height: 250px;
+    border: 0px;
+}
+
+.news-section .thumbnail .caption a{
+    float: right;
+    margin-top: 40px;
+    margin-right: 10px;
+}
+
 .bottom-box{
     width: 100%;
-    height: 180px;
     background-color: black;
-    padding: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .bottom-box .contact-box{
-    padding: 6px;
+    padding: 14px;
     background-color: white;
+    border: 2px solid rgba(132, 141, 145, 0.5);;
 }
 
-.bottom-box .map{
-    width: 200px;
-    height: 200px;
+.bottom-box .contact-title{
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.bottom-box .contact-form{
+    margin-top: 15px;
+}
+
+.bottom-box .map-container{
+    width: 100%;
+    height: 400px;
+    position: relative;
+}
+
+.bottom-box .map-container .map{
+    border:0; 
+    width: 100%;
     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 85%;
+    margin: auto;
 }
 
 footer{
