--- a/public/CSS/menu.css
+++ b/public/CSS/menu.css
@@ -1,4 +1,9 @@
 
+@font-face{
+    font-family: mangaFont;
+    src: url('../fonts/antique/GenEiAntiqueTP-M.ttf');
+}
+
 .menu{
     position: relative;
 }
@@ -18,6 +23,7 @@
 #main-menu > .container-fluid > .collapse>  .nav > li > a
 {
     color:white;
+    font-family: mangaFont;
 }
 
 #main-menu > .container-fluid > .collapse>  .nav > li.active > a,
