--- a/public/partials/company.html
+++ b/public/partials/company.html
@@ -53,7 +53,7 @@
                     <div class="col-xs-12 col-md-3 col-lg-3 col-sm-12" style="padding-right: 0px; padding-left: 0px;"> 
                         
                             <div class="info-header">
-                                <img class="col-xs-12 col-sm-12 col-md-12 col-lg-4" style="padding-left: 0px;" src="../R/ic_phone.png" alt="Phone:">
+                                <img style="padding-left: 0px;" src="../R/topsection/call.png" alt="Phone:">
     
                                 <div class="info-content col-xs-12 col-sm-12 col-md-12 col-lg-8" style="padding-right: 0px; padding-left: 10px">
                                     <h5>0125-23-3725</h5>
@@ -68,7 +68,7 @@
                     <div class="col-xs-12 col-md-3 col-lg-3 col-sm-12" style="padding-right: 0px; padding-left: 0px;"> 
                             
                                 <div class="info-header">
-                                    <img src="../R/ic_location.png" alt="Location">
+                                    <img src="../R/topsection/ic_location.png" alt="Location">
     
                                     <div class="info-content col-xs-12 col-sm-12 col-md-12 col-lg-8" style="padding-right: 0px; padding-left: 10px">
                                             <h5>北海道滝川市本町2丁目3番5号</h5>
