--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -46,54 +46,49 @@
     </div>
     
     <div class="logo-header">
-            <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
-            <div class="col-lg-10 col-xs-12 col-sm-8 col-md-8" style="padding: 0px; margin: 0px; 
-                                                                    display: flex; align-items: center; ">
+            <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
                 
-                <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12" style="padding-right: 0px; padding-left: 0px;">
-                        <div class="logos">
-                                <img class="logo-img" src="../R/Metalplatelogo.jpg">
-                                <img src="../R/title_logo.png">
+            <div class="col-lg-4 col-md-4 col-sm-5 col-xs-12" style="padding-right: 0px; padding-left: 0px;">
+                    <div class="logos">
+                            <img class="logo-img" src="../R/Metalplatelogo.jpg">
+                            <img src="../R/title_logo.png">
+
+                    </div>
+                    
+            </div> 
+            
+            <div id="call-id" class="col-lg-2 col-md-2 col-sm-5 col-xs-12"> 
+                
+                    <div class="info-header">
+                        <img style="padding-left: 0px;" src="../R/topsection/call.png" alt="Phone:">
+
+                        <div class="info-content col-xs-12 col-sm-12 col-md-12 col-lg-8" style="padding-right: 0px; padding-left: 10px;">
+                            <h5>0125-23-3725</h5>
+                            <p>FAX 0125-23-2250</p>
 
                         </div>
-                        
+                    
+                    </div>
+                    
+            </div>
 
-                </div> 
-            
-                <div class="col-xs-12 col-md-3 col-lg-3 col-sm-12" style="padding-right: 0px; padding-left: 0px;"> 
+            <div class="col-lg-4 col-md-4 col-sm-10 col-xs-12" style="padding-right: 0px; padding-left: 0px;"> 
                     
                         <div class="info-header">
-                            <img style="padding-left: 0px;" src="../R/topsection/call.png" alt="Phone:">
+                            <img src="../R/topsection/ic_location.png" alt="Location">
 
                             <div class="info-content col-xs-12 col-sm-12 col-md-12 col-lg-8" style="padding-right: 0px; padding-left: 10px">
-                                <h5>0125-23-3725</h5>
-                                <p>FAX 0125-23-2250</p>
-
-                            </div>
+                                    <h5>北海道滝川市本町2丁目3番5号</h5>
+                                    <p>ＴＳビル1階</p>
+    
+                                </div>
                         
                         </div>
                         
-                </div>
-
-                <div class="col-xs-12 col-md-3 col-lg-3 col-sm-12" style="padding-right: 0px; padding-left: 0px;"> 
-                        
-                            <div class="info-header">
-                                <img src="../R/topsection/ic_location.png" alt="Location">
-
-                                <div class="info-content col-xs-12 col-sm-12 col-md-12 col-lg-8" style="padding-right: 0px; padding-left: 10px">
-                                        <h5>北海道滝川市本町2丁目3番5号</h5>
-                                        <p>ＴＳビル1階</p>
+            </div>
+      
+            <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
         
-                                    </div>
-                            
-                            </div>
-                            
-                    </div>
-
-            </div>         
-        <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
-        
-
     </div>
 
     <div class="menu" ng-controller="redirectController">
@@ -411,13 +406,13 @@
     <footer>
         <div class="container">
             <div class="row">
-                <span class="col-lg-1 hidden-xs col-md-1 hidde-sm"></span>
+                <span class="col-lg-1 col-md-1 hidden-sm hidden-xs "></span>
 
-                <div class=" col-lg-4 col-md-4 widget">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 widget">
                     <img src="../R/group_logo.jpg">
-                    
                 </div>
-                <div class="col-lg-3 col-md-4  widget">
+
+                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 widget">
                     <h2>お問い合わせ</h2>
                     <article class="widget_content">
                         <ul>
@@ -427,7 +422,7 @@
                         </ul>
                     </article>
                 </div>
-                <div class="col-lg-3 col-md-4  widget">
+                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 widget">
                         <h2 class="orange">サイトマップ</h2>
                     <ul>
                             
@@ -439,7 +434,8 @@
                     
                     </ul>
                 </div>
-                        <span class="col-lg-1 hidden-xs col-md-1 hidden-sm"></span>
+
+                <span class="col-lg-1 col-md-1 hidden-sm hidden-xs"></span>
             </div>
         </div>
         <div class="footer-bottom">
